--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,7 @@
     var(--_g) 0 calc(-1*var(--_d) - var(--y));
 mask-repeat: no-repeat;
 }
+
+.register-ellipse{
+  border-radius: 28% 72% 62% 38% / 41% 48% 52% 59%;
+}
