--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,18 @@ ul{
 .footerLink li:hover{
   color: white;
 }
+
+/* .inputStyle{
+  
+      border: "2px solid transparent",
+        border-image: "linear-gradient(90.73deg, #D86F13 2.13%, #55C41A 5.16%, #05AF2B 7.08%, rgba(102,102,102,0.08) 41.19%)",
+        borderImageSlice: 1,
+        borderRadius: "10px",
+        backgroundClip: "padding-box",
+    } */
+
+    .searchInput{
+      border: 2px solid transparent;
+      background: linear-gradient(#202b19, #202b19) padding-box, linear-gradient(90.73deg, #D86F13 2.13%, #55C41A 5.16%, #05AF2B 7.08%, rgba(102, 102, 102, 0.08) 41.19%) border-box;
+      border-radius: 10px;
+    }
